--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "~5.4",
         "symfony/console": "~2.6",
-        "umpirsky/centipede-crawler": "dev-master"
+        "umpirsky/centipede-crawler": "~0.1"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0"
