--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,10 @@
     ],
     "autoload": {
         "psr-0": { "Centipede\\": "src/" }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1-dev"
+        }
     }
 }
