Allow PHP 7.X usage

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "~5.4",
+        "php": ">=5.4",
         "symfony/console": "~2.6",
         "umpirsky/centipede-crawler": "~0.1"
     },
